--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -24,7 +24,8 @@ body {
 	z-index: var(--z-index300);
 	width: 100%;
 	height: var(--header-height);
-	background-color: var(--bg-card-color);
+	background-color: rgba(0, 0, 0, 0.5);
+	background-image: linear-gradient(180deg, #282828 0%, #11141F 0.01%, rgba(17, 20, 31, 0) 100%);
 	transition: var(--transition);
 	box-shadow: var(--box-shadow);
 
@@ -39,10 +40,9 @@ body {
 // Main
 .main {
 	padding: var(--small-padding);
-	margin-top: var(--header-height);
 }
 
-// // Footer
+// Footer
 .footer {
 	background-color: var(--bg-card-color);
 
