--- a/src/scss/pokemon.scss
+++ b/src/scss/pokemon.scss
@@ -2,27 +2,55 @@
 .header {
 
 	&__link {
-		font-family: var(--titles-font);
-		font-size: var(--h2-font-size);
 		text-decoration: none;
+		font-family: var(--titles-font);
+		font-size: var(--h1-font-size);
+	}
+
+	&__image {
+		height: 38px;
 	}
 }
 
 .banner {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	transition: padding .9s;
-	padding: 15vh 0;
+	position: relative;
 	
-	@media screen and (min-width: 768px) {
-		padding: 25vh 0;
+	&__image {
+		// position: relative;
+		// display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 	
-	@media screen and (min-width: 768px) {
-		padding: 30vh 0;
+	&__content {
+		background-image: linear-gradient(0deg, rgba(17, 20, 31, 0.6), rgba(17, 20, 31, 0.5));
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+
+		&::before,
+		&::after {
+			content: '';
+			display: block;
+			width: 100%;
+			height: 90px;
+			position: absolute;
+		}
+		
+		&::before {
+			top: 0;
+			background-image: linear-gradient(180deg, #282828 0%, #11141F 0.01%, rgba(17, 20, 31, 0) 100%);
+		}
+		
+		&::after {
+			bottom: 0;
+			background-image: linear-gradient(180deg, rgba(17, 20, 31, 0) 0%, #11141F 100%);
+		}
 	}
 
 	&__title{
