--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -81,9 +81,10 @@
 		}
 	}
 	.dark {
-		--text-color: #FFFFFF;
-		--bg-color: #11141F;
-		--bg-card-color: #0A2232;
+		--title-color: #FBFBFB;
+		--text-color: #EFF3F5;
+		--bg-color: #1C1C1E;
+		--bg-card-color: #2C2C2E;
 
 		--bg-rgba: rgba(10, 34, 50, 0.25);
 	}
