--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -4,7 +4,6 @@ body {
 	color: var(--text-color);
 	font-size: var(--normal-font-size);
 	transition: var(--transition);
-	background-color: var(--bg-color);
 }
 
 
@@ -18,16 +17,7 @@ body {
 
 // Header
 .header {
-	position: sticky;
-	top: 0;
-	left: 0;
-	z-index: var(--z-index300);
-	width: 100%;
 	height: var(--header-height);
-	background-color: rgba(0, 0, 0, 0.5);
-	background-image: linear-gradient(180deg, #282828 0%, #11141F 0.01%, rgba(17, 20, 31, 0) 100%);
-	transition: var(--transition);
-	box-shadow: var(--box-shadow);
 
 	&__content {
 		height: inherit;
@@ -37,25 +27,19 @@ body {
 	}
 }
 
-// Main
-.main {
-	padding: var(--small-padding);
-}
-
-// Footer
-.footer {
-	background-color: var(--bg-card-color);
-
-	&__title {
-		text-align: center;
-	}
-}
-
 .header,
+.main,
 .footer {
 	padding: 0 var(--small-padding);
 	
 	@media screen and (min-width: 1024px) {
 		padding: 0 var(--normal-padding);
+	}
+}
+// Footer
+.footer {
+	&__content {
+		padding: var(--normal-padding) 0;
+		text-align: center;
 	}
 }
