--- a/src/scss/my-normalize.scss
+++ b/src/scss/my-normalize.scss
@@ -67,10 +67,12 @@ h4,
 h5,
 h6 {
 	font-family: var(--titles-font);
+	margin: 0;
+	line-height: 1.3;
 }
 
 h1 { font-weight: 800; font-size: var(--h1-font-size); }
-h2 { font-weight: 600; font-size: var(--h2-font-size); }
+h2 { font-weight: 700; font-size: var(--h2-font-size); }
 h3, h4, h5, h6 { font-weight: 500; }
 
 
