--- a/src/scss/pokemon.scss
+++ b/src/scss/pokemon.scss
@@ -1,5 +1,35 @@
 
+.home {
+	min-height: 100vh;
+
+	&__image-container {
+		width: 100vw;
+		height: 100vh;
+		position: fixed;
+		top: 0;
+		left: 0;
+		z-index: -1;
+
+		&::before {
+			content: '';
+			display: block;
+			width: inherit;
+			height: inherit;
+			position: absolute;
+			background-color: rgba(28, 28, 30, .6);
+		}
+	}
+
+	&__image {
+		height: 100%;
+		width: 100%;
+		object-fit: cover;
+	}
+}
+
+
 .header {
+	background-color: transparent;
 
 	&__link {
 		text-decoration: none;
@@ -13,97 +43,53 @@
 }
 
 .banner {
-	position: relative;
-	
-	&__image {
-		// position: relative;
-		// display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-	
-	&__content {
-		background-image: linear-gradient(0deg, rgba(17, 20, 31, 0.6), rgba(17, 20, 31, 0.5));
-		position: absolute;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-
-		&::before,
-		&::after {
-			content: '';
-			display: block;
-			width: 100%;
-			height: 90px;
-			position: absolute;
-		}
-		
-		&::before {
-			top: 0;
-			background-image: linear-gradient(180deg, #282828 0%, #11141F 0.01%, rgba(17, 20, 31, 0) 100%);
-		}
-		
-		&::after {
-			bottom: 0;
-			background-image: linear-gradient(180deg, rgba(17, 20, 31, 0) 0%, #11141F 100%);
-		}
-	}
-
-	&__title{
-		font-size: calc( var(--h1-font-size) + var(--h2-font-size) );
-	}
-
-	&__title,
-	&__text {
-		margin: 0;
-	}
-	&__text {
-		font-size: var(--h3-font-size);
-		color: var(--dark-three);
-	}
+	height: 50vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.title {
+	font-size: calc( var(--h1-font-size) + var(--h2-font-size) );
+	color: var(--title-color);
+}
+.text {
+	font-size: var(--h3-font-size);
+	margin: 0;
 }
 
 .pokemon {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(250px, auto));
 	justify-items: center;
 	gap: var(--normal-gap);
-	padding: var(--normal-padding) 0;
-
+	padding: var(--normal-padding);
 
 	&__card {
 		width: 100%;
-		max-width: 320px;
-
 		background-color: var(--bg-card-color);
 		text-align: center;
 		border-radius: var(--border-radius);
 		padding: var(--normal-padding);
+		padding-bottom: var(--large-padding);
 	}
-
-	&__name,
-	&__text {
-		margin: var(--small-margin) 0;
-	}
-	
 	&__name {
+		margin: 0;
 		font-size: var(--h2-font-size);
-		font-style: italic;
+		font-weight: bold;
+		line-height: 1.3;
 	}
 	
 	&__text {
-		color: var(--dark-three);
+		margin: 0;
 		text-transform: capitalize;
 	}
 
 	&__image {
 		margin-left: auto;
 		margin-right: auto;
-		height: 140px;
+		height: 160px;
+		object-fit: cover;
 	}
 }
 
@@ -122,16 +108,5 @@
 	&__image {
 		height: 24px;
 		width: 24px;
-	}
-}
-
-.footer {
-	&__content {
-		padding: var(--normal-padding) 0;
-		text-align: center;
-	}
-
-	&__text {
-		margin: 0;
 	}
 }
