--- a/src/index.pug
+++ b/src/index.pug
@@ -8,13 +8,14 @@ html(lang="es")
 		link(rel="shortcut icon", href="assets/icons/purihuamanp-blue.svg", type="image/x-icon")
 		link(rel="preconnect" href="https://fonts.googleapis.com")
 		link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
-		link(href="https://fonts.googleapis.com/css2?family=Creepster&family=Roboto:wght@400;700&display=swap" rel="stylesheet")
+		link(href="https://fonts.googleapis.com/css2?family=Creepster&family=Inter:wght@400;700;800&display=swap" rel="stylesheet")
 	body.dark
 		.home
 			.home__image-container
 				img(src="./assets/image/pokemon.jpg", alt="").home__image
+
 			header.header
-				.content
+				.container
 					.header__content
 						a(href="./index.html" class="header__link") Pokemon
 						.networks
@@ -22,14 +23,48 @@ html(lang="es")
 								img(src="assets/icons/twitter.svg" alt="" class='networks__image')
 							a(href="https://github.com/puriihuamanp/poke-api" class="networks__link" class='@purihuamanp' rel="nofollow noopener noreferrer" target="_blank")
 								img(src="./assets/icons/github.svg" alt="" class='networks__image')
+
 			main.main
-				.content
-					.banner
-						h1.title Api de Pokemon
-						p.text Ve tu pokemon favorito
-					.pokemon#pokemon
+				.banner
+					h1.banner__title Api de Pokemon
+					p.banner__text Ve tu pokemon favorito
+
+				.container
+					.search
+						.search__content
+							input(type="text" id="searchPoke" placeholder="Buscar" class="search__input")
+					section.pokemon__content
+						.pokemon#pokemon
+							//- table.table#table
+							//- 	thead.table__header
+							//- 		tr.table__row
+							//- 			th.table__head ID
+							//- 			th.table__head Nombre
+							//- 			th.table__head Image
+							//- 			th.table__head Tipo
+							//- 	tbody
+
+						nav.navegation#navegation
+
+
+
+					template#template
+						article.pokemon__card(data-card='poke')
+							.pokemon__container
+								img.pokemon__image
+							p.pokemon__name
+							p.pokemon__text
+
+					//- template#template
+					//- 	tr(data-row="row").table__row
+					//- 		td(data-id="id").table__data 1
+					//- 		td(data-name="name").table__data Bulbasaur
+					//- 		td(data-pic="pic").table__data
+					//- 			img(src="", alt="" class="table__image" data-image="image")
+					//- 		td(data-type="type").table__data Grass
+
 			footer.footer
-				.content
+				.container
 					.footer__content
 						p(class="footer__text") Desarrollado por <b>Pedro Purihuaman</b> - &copy; 2021
 
