--- a/src/scss/config/_theme-colors.scss
+++ b/src/scss/config/_theme-colors.scss
@@ -125,6 +125,7 @@ $green-900: #30d15880;
 	--grey-700: #191f2a;
 	--grey-800: #171c26;
 	--grey-900: #151922;
+	--grey-rgb: #15192280;
 }
 
 :root {
