--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,8 @@
 @import './scss/components/navegation';
 @import './scss/components/buttons';
 @import './scss/components/table';
+@import './scss/components/loader';
+@import './scss/components/modal';
 
 // Helpers
 @import './scss/helpers/scroll';
