--- a/src/scss/base/_footer.scss
+++ b/src/scss/base/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
 	padding: 0 var(--n-padding);
 	border-top: 1px solid var(--border-color);
+	background-color: var(--first-bg);
 
 	&__content {
 		padding: var(--n-padding) 0;
