--- a/src/scss/base/_main.scss
+++ b/src/scss/base/_main.scss
@@ -1,6 +1,6 @@
 .main {
-	padding-top: var(--l-padding);
-	padding-bottom: var(--l-padding);
+	padding: var(--l-padding) var(--n-padding);
+	padding-bottom: 0;
 	height: 100%;
-	// background-color: var(--first-bg);
+	background-color: var(--first-bg);
 }
