--- a/src/scss/base/_my-reset.scss
+++ b/src/scss/base/_my-reset.scss
@@ -12,6 +12,7 @@
 
 html {
 	line-height: var(--body-line-height);
+	font-size: 16px;
 }
 
 body {
@@ -44,6 +45,7 @@ h6 {
 	font-family: var(--heading-font);
 	line-height: var(--heading-line-height);
 	color: var(--title-color);
+	margin: 0;
 }
 
 h1,
@@ -56,15 +58,6 @@ h4,
 h5,
 h6 {
 	font-weight: var(--fweight-semibold);
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	margin: 0;
 }
 
 p {
