--- a/src/scss/components/_navegation.scss
+++ b/src/scss/components/_navegation.scss
@@ -5,5 +5,6 @@
 	align-items: center;
 	gap: var(--n-gap);
 	border-top: 1px solid var(--border-color);
-	// background-color: var(--first-bg);
+	position: sticky;
+	bottom: 0;
 }
