--- a/src/scss/config/_typography.scss
+++ b/src/scss/config/_typography.scss
@@ -8,9 +8,9 @@
 
 :root {
 	--titles-font: 'Creepster', cursive, sans-serif;
-	--heading-font: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+	--heading-font: 'Manrope', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-	--main-font: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+	--main-font: 'Manrope', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
 	--header-font: #{font-rem(32px)};
