Removed development dependencies

--- a/src/index.pug
+++ b/src/index.pug
@@ -5,10 +5,10 @@ html(lang="es")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		title Pokemon API
-		link(rel="shortcut icon", href="assets/icons/purihuaman.svg", type="image/x-icon")
+		link(rel="shortcut icon", href="assets/icons/pvrihuaman.svg", type="image/x-icon")
 		link(rel="preconnect" href="https://fonts.googleapis.com")
 		link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
-		link(href="https://fonts.googleapis.com/css2?family=Creepster&family=Manrope:wght@400;700;800&display=swap" rel="stylesheet")
+		link(href="https://fonts.googleapis.com/css2?family=Creepster&family=Mulish:wght@400;700;800&display=swap" rel="stylesheet")
 	body.dark
 		.home
 			.home__image-container
@@ -98,7 +98,3 @@ html(lang="es")
 							b(class='footer__bold')
 								a(href="https://purihuamanp.netlify.app/" title='Pedro Purihuaman') Pedro Purihuaman
 							| &nbsp;- &copy; 2021
-						
-
-
-		script(src="https://unpkg.com/axios/dist/axios.min.js")
