Modifying network links

--- a/src/index.pug
+++ b/src/index.pug
@@ -20,9 +20,9 @@ html(lang="es")
 						a(href="./index.html" class="header__link") Pokemon
 
 						.networks
-							a(href="https://twitter.com/purihuamanp" class="networks__link" class='@purihuamanp' rel="nofollow noopener noreferrer" target="_blank")
+							a(href="https://twitter.com/pvrihuaman" class="networks__link" class='@purihuamanp' rel="nofollow noopener noreferrer" target="_blank")
 								img(src="assets/icons/twitter.svg" alt="" class='networks__image')
-							a(href="https://github.com/puriihuamanp/poke-api" class="networks__link" class='@purihuamanp' rel="nofollow noopener noreferrer" target="_blank")
+							a(href="https://github.com/pvrihuaman/poke-api" class="networks__link" class='@purihuamanp' rel="nofollow noopener noreferrer" target="_blank")
 								img(src="./assets/icons/github.svg" alt="" class='networks__image')
 
 			.banner
@@ -96,5 +96,5 @@ html(lang="es")
 					.footer__content
 						p(class="footer__text") Desarrollado por 
 							b(class='footer__bold')
-								a(href="https://purihuamanp.netlify.app/" title='Pedro Purihuaman') Pedro Purihuaman
+								a(href="https://pvrihuaman.netlify.app/" title='Pedro Purihuaman') Pedro Purihuaman
 							| &nbsp;- &copy; 2021
